@@ -9207,6 +9207,45 @@ static void _accumulate_step_set_env_info(gres_state_t *gres_ptr,
 }
 
 /*
+ * Filter usable_gres to include the correct gpus per task.
+ *
+ * IN/OUT - usable_gres
+ * IN - gpus_per_task_str
+ * IN - local_proc_id
+ */
+static void _filter_gres_per_task(bitstr_t *usable_gres,
+				  char *gpus_per_task_str, int local_proc_id)
+{
+	int gpus_per_task = strtol(gpus_per_task_str, NULL, 0);
+	int nskip = local_proc_id * gpus_per_task;
+	int i_first, i_last, bit;
+
+	i_first = bit_ffs(usable_gres);
+
+	if (i_first == -1)
+		return;
+
+	i_last = bit_fls(usable_gres);
+	for (bit = i_first; bit <= i_last; bit++) {
+		if (!bit_test(usable_gres, bit))
+			continue;
+		if (nskip) {
+			bit_clear(usable_gres, bit);
+			nskip--;
+		} else if (gpus_per_task) {
+			gpus_per_task--;
+		} else {
+			bit_nclear(usable_gres, bit,
+				   bit_size(usable_gres) - 1);
+			break;
+		}
+	}
+
+	if (gpus_per_task)
+		error("Not enough gpus to bind for gpus per task");
+}
+
+/*
  * Set environment as required for all tasks of a job step
  * IN/OUT job_env_ptr - environment variable array
  * IN step_gres_list - generated by gres_ctld_step_alloc()
@@ -9263,7 +9302,7 @@ extern void gres_g_task_set_env(char ***job_env_ptr, List step_gres_list,
 	gres_state_t *gres_ptr = NULL;
 	bool bind_gpu = accel_bind_type & ACCEL_BIND_CLOSEST_GPU;
 	bool bind_nic = accel_bind_type & ACCEL_BIND_CLOSEST_NIC;
-	char *sep, *map_gpu = NULL, *mask_gpu = NULL;
+	char *sep, *map_gpu = NULL, *mask_gpu = NULL, *gpus_per_task = NULL;
 	bitstr_t *usable_gres = NULL;
 	gres_internal_flags_t gres_internal_flags = GRES_INTERNAL_FLAG_NONE;
 	int tasks_per_gres = 0;
@@ -9292,6 +9331,8 @@ extern void gres_g_task_set_env(char ***job_env_ptr, List step_gres_list,
 			map_gpu = sep + 8;
 		else if (!strncasecmp(sep, "mask_gpu:", 9))
 			mask_gpu = sep + 9;
+		else if (!xstrncasecmp(sep, "per_task:", 9))
+			gpus_per_task = sep + 9;
 	}
 
 	(void) gres_init();
@@ -9302,7 +9343,8 @@ extern void gres_g_task_set_env(char ***job_env_ptr, List step_gres_list,
 			continue;	/* No plugin to call */
 		if (!step_gres_list)
 			continue;
-		if (bind_gpu || bind_nic || map_gpu || mask_gpu) {
+		if (bind_gpu || bind_nic || map_gpu || mask_gpu ||
+		    gpus_per_task) {
 			/* Set the GRES that this task can use (usable_gres) */
 			if (!xstrcmp(gres_ctx.gres_name, "gpu")) {
 				if (map_gpu) {
@@ -9316,8 +9358,12 @@ extern void gres_g_task_set_env(char ***job_env_ptr, List step_gres_list,
 					_filter_usable_gres(usable_gres,
 							    tasks_per_gres,
 							    local_proc_id);
-				}
-				else
+				} else if (gpus_per_task) {
+					usable_gres = _get_usable_gres(i);
+					_filter_gres_per_task(usable_gres,
+							      gpus_per_task,
+							      local_proc_id);
+				} else
 					continue;
 			} else if (!xstrcmp(gres_ctx.gres_name,
 					    "nic")) {
