@@ -362,6 +362,11 @@ static job_step_create_request_msg_t *_create_job_step_create_request(
 				   opt_local->ntasks_per_gpu);
 	}
 
+	if (!opt_local->tres_bind && opt_local->gpus_per_task) {
+		/* Implicit GPU binding with gpus_per_task */
+		xstrfmtcat(opt_local->tres_bind, "gpu:per_task:%s",
+			   opt_local->gpus_per_task);
+	}
 	step_req->tres_bind = xstrdup(opt_local->tres_bind);
 	step_req->tres_freq = xstrdup(opt_local->tres_freq);
 
